# AutoOps---Production-DevOps-Multi-Agent-System-with-Human-in-the-Loop-A2A

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.agentcore  PROJECT_TASKS.md  README.md  agentcore_app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentcore/: config.yaml
agentcore/policies/: write_gate.cedar
autoops/: __init__.py  agentcore_app.py  api.py  hitl.py  main.py  mcp_client.py  observability.py  state.py  supervisor.py
autoops/a2a/: __init__.py  client.py  models.py  server.py
autoops/agents/: __init__.py  cloudwatch_agent.py  codereview_agent.py  github_agent.py  monitoring_agent.py
autoops/mcp/: __init__.py  mcp_cloudwatch.py  mcp_codereview.py  mcp_github.py  mcp_monitoring.py
scripts/: measure_metrics.py  seed_cloudwatch.py
tests/: conftest.py
tests/integration/: test_a2a_protocol.py  test_api.py  test_mcp_cloudwatch.py  test_mcp_codereview.py  test_mcp_github.py  test_mcp_monitoring.py
tests/unit/: test_agentcore_app.py  test_cloudwatch_agent.py  test_codereview_agent.py  test_codereview_mcp_tools.py  test_github_agent.py  test_github_mcp_tools.py  test_graph.py  test_hitl.py  test_mcp_client.py  test_monitoring_agent.py  test_monitoring_mcp_real.py  test_routing.py
