[project]
name = "autoops"
version = "0.1.0"
description = "Production DevOps multi-agent assistant."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
