[project]
name = "autoops"
version = "0.1.0"
description = "Production DevOps multi-agent assistant."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "bedrock-agentcore>=1.0.0",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "logfire>=2.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
autoops = "autoops.main:main"

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "flake8>=7.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
